--- a/test.html
+++ b/test.html
@@ -1,3 +1,15 @@
-<h1>I'm a big heading</h1>
-<p>Hey. I'm a paragraph.</p>
-<a href="https://google.com" target="_blank" title="Open google">Click me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>I'm a big heading</h1>
+    <p>Hey. I'm a <i>paragraph</i>.</p>
+    <a href="https://google.com" target="_blank" title="Open google">Click me!</a>
+    <p>
+        Wear your mask<br>Protect everyone
+    </p>
+    <img src="https://images.theconversation.com/files/350865/original/file-20200803-24-50u91u.jpg?ixlib=rb-1.1.0&rect=37%2C29%2C4955%2C3293&q=45&auto=format&w=926&fit=clip">
+</body>
+</html>
